# hh_ru_searcher

./: README.md  main.py  pyproject.toml  vacancies.json
data/: vacancies.json
src/: HH_API_CONNECTOR.py  Parser.py  Saver.py  SaverJSON.py  Vacancy.py  funcs.py
tests/: tests.py
