[tool.poetry]
name = "hh-ru-searcher"
version = "0.1.0"
description = ""
authors = ["Ivan Nikolaev <nikolaevcool07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
